# goit-web-hw-02

./: Dockerfile  pyproject.toml  requirements.txt
goit_web_hw_02/: main.py
goit_web_hw_02/assistant_ostap/: classes.py  handlers.py  notes.py  ui.py
tests/: test_goit_web_hw_02.py
