[tool.poetry]
name = "goit-web-hw-02"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "^0.18.0"
pyreadline3 = "^3.4.1"
python-Levenshtein = "^0.21.1"
rich = "^13.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
